[package]
name = "nnndots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
egui_plot = "0.23.0"
histo = "1.0.0"
lazy_static = "1.4.0"
log = "0.4.20"
nannou = "0.19.0"
nannou_egui = "0.19.0"
palette = { version = "0.7.4", features = ["named"] }
pretty_env_logger = "0.5.0"
rand_distr = "0.4.3"
structopt = "0.3.26"
typed-builder = "0.18.1"
